fix: general fixes, warnings removal, added some tests for EZShop::startReturnTransaction methods